--- a/home.html
+++ b/home.html
@@ -192,7 +192,7 @@
             <img src="assets/image/image 4.jpg" alt="banner-bg" class="absolute bottom-0 lg:left-0 sm:right-40  xl:w-auto sm:w-1/2">
         </div>
         <div class="my-20"></div>
-        <div class="container  lg:container  xl:container  lg:container  md:container  sm:container   mx-auto px-4 flex items-center py-4 text-xl "
+        <div class="container  lg:container  xl:container  lg:container  md:container  sm:container lg:hidden sm:block   mx-auto px-4 flex items-center py-4 text-xl "
                 data-aos="zoom-in">
                 <div class="banner-img flex items-center mt-10 relative">
                     <img class="w-3/5" src="assets/image/banner-img.png" alt="banner-img"
