--- a/home.html
+++ b/home.html
@@ -410,7 +410,7 @@
                         </div>
                         <div class="flex justify-between items-start mt-20">
                             <div class="flex flex-col items-center" data-aos="zoom-in">
-                                <div class="xl:w-60 xl:w-60 lg:w-48 lg:h-48 sm:w-32 sm:h-32">
+                                <div>
                                     <img class="object-cover sm:w-32 sm:h-32 xl:w-64 xl:h-64 lg:w-48 lg:h-48"
                                         src="assets/image/services-1.png" alt="services-1"
                                         style="border: 2px solid #241e37;">
@@ -418,7 +418,7 @@
                                 <p class="text-center mt-6 lg:text-2xl sm:text-lg">Virtual Reality</p>
                             </div>
                             <div class="flex flex-col items-center" data-aos="zoom-in">
-                                <div class="xl:w-60 xl:w-60 lg:w-48 lg:h-48 sm:w-32 sm:h-32">
+                                <div>
                                     <img class="object-cover sm:w-32 sm:h-32 xl:w-64 xl:h-64 lg:w-48 lg:h-48"
                                         src="assets/image/services-2.png" alt="services-2"
                                         style="border: 2px solid #241e37;">
@@ -426,7 +426,7 @@
                                 <p class="text-center mt-6 lg:text-2xl sm:text-lg">VR Industrial <br> Training</p>
                             </div>
                             <div class="flex flex-col items-center" data-aos="zoom-in">
-                                <div class="xl:w-60 xl:w-60 lg:w-48 lg:h-48 sm:w-32 sm:h-32">
+                                <div>
                                     <img class="object-cover sm:w-32 sm:h-32 xl:w-64 xl:h-64 lg:w-48 lg:h-48 object-center"
                                         src="assets/image/services-3.png" alt="services-3"
                                         style="border: 2px solid #241e37;">
@@ -434,7 +434,7 @@
                                 <p class="text-center mt-6 lg:text-2xl sm:text-lg">Metaverse <br> Development</p>
                             </div>
                             <div class="flex flex-col items-center" data-aos="zoom-in">
-                                <div class="xl:w-60 xl:w-60 lg:w-48 lg:h-48 sm:w-32 sm:h-32">
+                                <div>
                                     <img class="object-cover sm:w-32 sm:h-32 xl:w-64 xl:h-64 lg:w-48 lg:h-48"
                                         src="assets/image/services-4.png" alt="services-4"
                                         style="border: 2px solid #241e37;">
@@ -442,7 +442,7 @@
                                 <p class="text-center mt-6 lg:text-2xl sm:text-lg">Virtual Event <br> Management</p>
                             </div>
                             <div class="flex flex-col items-center" data-aos="zoom-in">
-                                <div class="xl:w-60 xl:w-60 lg:w-48 lg:h-48 sm:w-32 sm:h-32">
+                                <div>
                                     <img class="object-cover sm:w-32 sm:h-32 xl:w-64 xl:h-64 lg:w-48 lg:h-48"
                                         src="assets/image/services-5.png" alt="services-5"
                                         style="border: 2px solid #241e37;">
