--- a/service-metaverse.html
+++ b/service-metaverse.html
@@ -95,11 +95,11 @@
     <!-- main -->
     <main>
         <!-- banner -->
-        <div class="sub-banner bg-center bg-top bg-cover bg-no-repeat p-40">
-            <div class="container mx-auto px-4 flex items-center py-4 text-xl">
-                <div class="w-3/5 flex items-center">
-                    <h1 class="font-2 text-7xl leading-normal mt-20" data-aos="fade-right">
-                        <span class="font-2 text-7xl text-yellow-500">METAVERSE</span> DEVELOPMENT
+        <div class="sub-banner bg-center bg-top bg-cover bg-no-repeat p-40 pl-0">
+            <div class="container mx-auto px-4  xl:pl-28 flex items-center py-4 text-xl">
+                <div class="w-3/5 flex items-center ">
+                    <h1 class="font-2 lg:text-7xl sm:text-6xl leading-normal mt-20" data-aos="fade-right">
+                        <span class="font-2 lg:text-7xl sm:text-6xl text-yellow-500 block">METAVERSE</span> DEVELOPMENT
                     </h1>
                 </div>
             </div>
@@ -168,7 +168,7 @@
         <!-- twin-reality-sol -->
         <div class="twin-reality overflow-hidden">
             <div class="container mx-auto px-4 flex items-center py-4 text-xl">
-                <div class=" w-2/5">
+                <div class="xl:w-2/5">
                     <h2 class="font-2 text-6xl uppercase leading-normal">metaverse Development for Business</h2>
                     <div class="banner-border-2 pb-4"></div>
                     <p class="font-light mt-8 text-gray-400 leading-relaxed tracking-wide">
@@ -180,16 +180,19 @@
                         business outcomes across a range of industries.
                     </p>
                 </div>
-                <div class="w-3/5 twin-reality-img tr-sol bg-center  bg-cover bg-no-repeat  relative"
+                <div class="w-3/5 twin-reality-img tr-sol bg-center  bg-cover bg-no-repeat  relative xl:block sm:hidden"
                     data-aos="fade-left"></div>
             </div>
             <div class="container mx-auto px-4 flex items-center py-4 text-xl">
-                <p class="font-light text-gray-400 leading-relaxed tracking-wide">
-                    At Twin Reality, we believe that the metaverse represents a powerful new tool for businesses looking
-                    to achieve their goals and stand out in an increasingly competitive marketplace. With our expertise
-                    in metaverse development and immersive technologies, we are well-positioned to help companies of all
-                    sizes and industries harness the full potential of this exciting new technology.
-                </p>
+                <div class="flex flex-col">
+                    <img src="assets/image/vr-sol.png" alt="vr-sol" class="h-96 object-cover object-center xl:hidden sm:block">
+                    <p class="font-light text-gray-400 leading-relaxed tracking-wide">
+                        At Twin Reality, we believe that the metaverse represents a powerful new tool for businesses looking
+                        to achieve their goals and stand out in an increasingly competitive marketplace. With our expertise
+                        in metaverse development and immersive technologies, we are well-positioned to help companies of all
+                        sizes and industries harness the full potential of this exciting new technology.
+                    </p>
+                </div>
             </div>
         </div>
         <div class="my-28"></div>
@@ -203,53 +206,53 @@
                         provide numerous benefits and help you stay ahead of the competition in today’s rapidly
                         evolving business landscape.</p>
                 </div>
-                <div class="w-full flex items-start justify-evenly mt-20">
-                    <div class=" flex flex-col items-center justify-center text-center w-5/12 h-72"
+                <div class="w-full flex lg:flex-row sm:flex-col items-start justify-evenly mt-20">
+                    <div class="mt-14 flex flex-col items-center justify-center text-center lg:w-5/12 sm:w-full h-72"
                         data-aos="fade-down-right"
                         style="background: linear-gradient(#09021b, #09021b) 50% 50%/calc(100% - 4px) calc(100% - 4px) no-repeat,linear-gradient(#816912 0%, #634b11 34%, #09021b 100%);border-radius: 0px;box-sizing: content-box;">
                         <h6 class="font-2 text-2xl">
                             Enhanced Learning Experience
                         </h6>
-                        <p class="text-zinc-400 mt-7 px-10">
+                        <p class="text-zinc-400 mt-7 px-10 xl:text-xl sm:text-base">
                             A metaverse can help businesses to create highly immersive and engaging experiences for
                             their customers. This can include everything from virtual showrooms and product
                             demos to interactive experiences that allow customers to explore your products or
                             services in new and innovative ways.
                         </p>
                     </div>
-                    <div class=" flex flex-col items-center justify-center text-center w-5/12 h-72"
+                    <div class="mt-14 flex flex-col items-center justify-center text-center lg:w-5/12 sm:w-full h-72"
                         data-aos="fade-down-left"
                         style="background: linear-gradient(#09021b, #09021b) 50% 50%/calc(100% - 4px) calc(100% - 4px) no-repeat,linear-gradient(#816912 0%, #634b11 34%, #09021b 100%);border-radius: 0px;box-sizing: content-box;">
                         <h6 class="font-2 text-2xl">
                             Improved Employee Training
                         </h6>
-                        <p class="text-zinc-400 mt-7 px-10">
+                        <p class="text-zinc-400 mt-7 px-10 xl:text-xl sm:text-base">
                             Metaverse technology can help to improve employee training by providing interactive
                             simulations, gamifying learning, enabling remote training, & providing real-time
                             feedback. By using metaverse technology, companies can create more engaging experiences.
                         </p>
                     </div>
                 </div>
-                <div class="w-full flex items-start justify-evenly mt-14">
-                    <div class=" flex flex-col items-center justify-center text-center w-5/12 h-72 "
+                <div class="w-full flex lg:flex-row sm:flex-col items-start justify-evenly lg:mt-14">
+                    <div class="mt-14 flex flex-col items-center justify-center text-center lg:w-5/12 sm:w-full h-72 "
                         data-aos="fade-up-right"
                         style="background: linear-gradient(#09021b, #09021b) 50% 50%/calc(100% - 4px) calc(100% - 4px) no-repeat,linear-gradient(#816912 0%, #634b11 34%, #09021b 100%);border-radius: 0px;box-sizing: content-box;">
                         <h6 class="font-2 text-2xl">
                             Increased Brand Awareness
                         </h6>
-                        <p class="text-zinc-400 mt-7 px-10">
+                        <p class="text-zinc-400 mt-7 px-10 xl:text-xl sm:text-base">
                             By creating a unique and memorable virtual experience, a metaverse can help to increase
                             brand awareness and improve customer loyalty. This can be particularly effective for
                             businesses in highly competitive industries.
                         </p>
                     </div>
-                    <div class=" flex flex-col items-center justify-center text-center w-5/12 h-72"
+                    <div class="mt-14 flex flex-col items-center justify-center text-center lg:w-5/12 sm:w-full h-72"
                         data-aos="fade-up-left"
                         style="background: linear-gradient(#09021b, #09021b) 50% 50%/calc(100% - 4px) calc(100% - 4px) no-repeat,linear-gradient(#816912 0%, #634b11 34%, #09021b 100%);border-radius: 0px;box-sizing: content-box;">
                         <h6 class="font-2 text-2xl">
                             Competitive Advantage
                         </h6>
-                        <p class="text-zinc-400 px-10">
+                        <p class="text-zinc-400 mt-7 px-10 xl:text-xl sm:text-base">
                             With the increasing popularity of immersive technologies like virtual reality and
                             augmented reality, businesses that are able to leverage the metaverse effectively can
                             gain a significant competitive advantage over those that do not.
@@ -263,7 +266,7 @@
         <div class="metaverse">
             <div class="container mx-auto px-4 flex flex-col items-center py-4 text-xl">
                 <div class="w-full text-center">
-                    <h2 class=" font-2 text-7xl leading-normal">Metaverse Development Solutions​</h2>
+                    <h2 class=" font-2 lg:text-7xl leading-normal">Metaverse Development Solutions​</h2>
                     <p class="font-light pt-10 text-zinc-300 tracking-wide">Developing a metaverse for your business can
                         provide numerous benefits and help you stay ahead of the competition in today’s rapidly
                         evolving business landscape.</p>
@@ -280,7 +283,7 @@
                                         <p class="font-2 text-2xl pl-5">Enhanced Learning Experience</p>
                                     </div>
                                     <div class="">
-                                        <p class="mt-10 leading-loose tracking-wider font-light text-zinc-300">
+                                        <p class="mt-10 xl:leading-loose tracking-wider font-light text-zinc-300">
                                             VR provides an immersive and interactive training environment, allowing
                                             trainees
                                             to engage with realistic simulations. This hands-on experience enhances
@@ -292,7 +295,7 @@
                                 <div class=" border border-zinc-50 border-solid opacity-10" style="height: 495px;">
                                 </div>
                                 <div class="w-1/2 h-96 pt-16" data-aos="fade-down-left">
-                                    <img src="assets/image/tranning-img.png" alt="tranning-img" style=" height: 430px;">
+                                    <img src="assets/image/tranning-img.png" alt="tranning-img" style=" height: 430px;" class="object-cover object-center">
                                 </div>
                             </div>
                             <div class="w-full flex items-start">
@@ -308,7 +311,7 @@
                                         <p class="font-2 text-2xl pl-5">Cost And Time Savings</p>
                                     </div>
                                     <div class="">
-                                        <p class="mt-10 leading-loose tracking-wider font-light text-zinc-300">
+                                        <p class="mt-10 xl:leading-loose tracking-wider font-light text-zinc-300">
                                             VR training eliminates the need for expensive physical equipment setups,
                                             travel expenses, and material consumption for training purposes. It also
                                             reduces the time required for training sessions, as trainees can access
@@ -321,14 +324,14 @@
 
                         <!-- Slide 2 -->
                         <div class="min-w-full flex flex-col items-center p-6 rounded-lg">
-                            <div class="w-full flex items-start mt-20">
+                            <div class="w-full flex justify-start mt-20">
                                 <div class="w-1/2 flex flex-col justify-center" style="height: 495px;">
                                     <div class="flex items-center">
                                         <span class="text-5xl text-yellow-500">01.</span>
                                         <p class="font-2 text-2xl pl-5">Enhanced Learning Experience</p>
                                     </div>
                                     <div class="">
-                                        <p class="mt-10 leading-loose tracking-wider font-light text-zinc-300">
+                                        <p class="mt-10 xl:leading-loose tracking-wider font-light text-zinc-300">
                                             VR provides an immersive and interactive training environment, allowing
                                             trainees
                                             to engage with realistic simulations. This hands-on experience enhances
@@ -339,13 +342,13 @@
                                 </div>
                                 <div class=" border border-zinc-50 border-solid opacity-10" style="height: 495px;">
                                 </div>
-                                <div class="w-1/2 h-96 pt-16">
-                                    <img src="assets/image/tranning-img.png" alt="tranning-img" style=" height: 430px;">
+                                <div class="w-1/2 h-96 pt-16" data-aos="fade-down-left">
+                                    <img src="assets/image/tranning-img.png" alt="tranning-img" style=" height: 430px;" class="object-cover object-center">
                                 </div>
                             </div>
                             <div class="w-full flex items-start">
                                 <div class="w-1/2">
-                                    <img src="assets/image/metaverse.png" alt="metaverse"
+                                    <img src="assets/image/metaverse.png" alt="metaverse" data-aos="fade-up-right"
                                         style="width: 750px; height: 430px;" class="object-cover object-center">
                                 </div>
                                 <div class=" border border-zinc-50 border-solid opacity-10" style="height: 495px;">
@@ -356,7 +359,7 @@
                                         <p class="font-2 text-2xl pl-5">Cost And Time Savings</p>
                                     </div>
                                     <div class="">
-                                        <p class="mt-10 leading-loose tracking-wider font-light text-zinc-300">
+                                        <p class="mt-10 xl:leading-loose tracking-wider font-light text-zinc-300">
                                             VR training eliminates the need for expensive physical equipment setups,
                                             travel expenses, and material consumption for training purposes. It also
                                             reduces the time required for training sessions, as trainees can access
@@ -368,15 +371,15 @@
                         </div>
 
                         <!-- Slide 3 -->
-                        <div class="min-w-full flex flex-col items-center p-6 b rounded-lg">
-                            <div class="w-full flex items-start mt-20">
+                        <div class="min-w-full flex flex-col items-center p-6 rounded-lg">
+                            <div class="w-full flex justify-start mt-20">
                                 <div class="w-1/2 flex flex-col justify-center" style="height: 495px;">
                                     <div class="flex items-center">
                                         <span class="text-5xl text-yellow-500">01.</span>
                                         <p class="font-2 text-2xl pl-5">Enhanced Learning Experience</p>
                                     </div>
                                     <div class="">
-                                        <p class="mt-10 leading-loose tracking-wider font-light text-zinc-300">
+                                        <p class="mt-10 xl:leading-loose tracking-wider font-light text-zinc-300">
                                             VR provides an immersive and interactive training environment, allowing
                                             trainees
                                             to engage with realistic simulations. This hands-on experience enhances
@@ -387,13 +390,13 @@
                                 </div>
                                 <div class=" border border-zinc-50 border-solid opacity-10" style="height: 495px;">
                                 </div>
-                                <div class="w-1/2 h-96 pt-16">
-                                    <img src="assets/image/tranning-img.png" alt="tranning-img" style=" height: 430px;">
+                                <div class="w-1/2 h-96 pt-16" data-aos="fade-down-left">
+                                    <img src="assets/image/tranning-img.png" alt="tranning-img" style=" height: 430px;" class="object-cover object-center">
                                 </div>
                             </div>
                             <div class="w-full flex items-start">
                                 <div class="w-1/2">
-                                    <img src="assets/image/metaverse.png" alt="metaverse"
+                                    <img src="assets/image/metaverse.png" alt="metaverse" data-aos="fade-up-right"
                                         style="width: 750px; height: 430px;" class="object-cover object-center">
                                 </div>
                                 <div class=" border border-zinc-50 border-solid opacity-10" style="height: 495px;">
@@ -404,7 +407,7 @@
                                         <p class="font-2 text-2xl pl-5">Cost And Time Savings</p>
                                     </div>
                                     <div class="">
-                                        <p class="mt-10 leading-loose tracking-wider font-light text-zinc-300">
+                                        <p class="mt-10 xl:leading-loose tracking-wider font-light text-zinc-300">
                                             VR training eliminates the need for expensive physical equipment setups,
                                             travel expenses, and material consumption for training purposes. It also
                                             reduces the time required for training sessions, as trainees can access
