--- a/service-virtual-event.html
+++ b/service-virtual-event.html
@@ -95,11 +95,11 @@
     <!-- main -->
     <main>
         <!-- banner -->
-        <div class="sub-banner bg-center bg-top bg-cover bg-no-repeat p-40">
-            <div class="container mx-auto px-4 flex items-center py-4 text-xl">
-                <div class="w-3/5 flex items-center" data-aos="fade-right">
-                    <h1 class="font-2 text-7xl leading-normal mt-20">
-                        <span class="font-2 text-7xl text-yellow-500 block">CUSTOMIZED </span>VIRTUAL EVENT
+        <div class="sub-banner bg-center bg-top bg-cover bg-no-repeat p-40 pl-0">
+            <div class="container mx-auto px-4  xl:pl-28 flex items-center py-4 text-xl">
+                <div class="w-3/5 flex items-center ">
+                    <h1 class="font-2 lg:text-7xl sm:text-6xl leading-normal mt-20" data-aos="fade-right">
+                        <span class="font-2 lg:text-7xl sm:text-6xl text-yellow-500 block">CUSTOMIZED </span>VIRTUAL EVENT
                     </h1>
                 </div>
             </div>
@@ -202,17 +202,17 @@
                             Benefits of Virtual Event Management
                         </h3>
                     </div>
-                    <div class="w-full flex justify-between items-start mt-20">
-                        <div class="w-1/2 bg-cover bg-center bg-no-repeat"  data-aos="zoom-in-right"
-                            style="background-image: url('assets/image/event-manegement.jpg');height: 400px;">
+                    <div class="w-full flex xl:flex-row sm:flex-col justify-between items-start mt-20">
+                        <div class="xl:w-1/2 sm:w-full bg-cover bg-center bg-no-repeat"  data-aos="zoom-in-right"
+                            style="background-image: url('assets/image/event-manegement.jpg');height: 400px;image-rendering: pixelated;">
                         </div>
-                        <div class="w-1/2 flex justify-center items-center">
+                        <div class="xl:w-1/2 sm:w-full flex justify-center items-center">
                             <div class="w-1/2 flex flex-col justify-center items-center">
                                 <div class="w-72 h-48 flex flex-col justify-center items-center">
                                     <img src="assets/image/event (2).png" alt="event" data-aos="zoom-in">
                                     <span class="text-gray-400 mt-5">Custom Virtual Venue</span>
                                 </div>
-                                <div class=" border border-zinc-50 border-solid opacity-10" style="width: 378px;"></div>
+                                <div class="sm:w-full xl:w-1/2 border border-zinc-50 border-solid opacity-10"></div>
                                 <div class="w-72 h-48 flex flex-col justify-center items-center">
                                     <img src="assets/image/event (4).png" alt="event" data-aos="zoom-in">
                                     <span class="text-gray-400 mt-5">Custom Virtual Booths</span>
@@ -224,7 +224,7 @@
                                     <img src="assets/image/event (3).png" alt="event" data-aos="zoom-in">
                                     <span class="text-gray-400 mt-5">Live Conference Video</span>
                                 </div>
-                                <div class=" border border-zinc-50 border-solid opacity-10" style="width: 378px;"></div>
+                                <div class="sm:w-full xl:w-1/2 border border-zinc-50 border-solid opacity-10"></div>
                                 <div class="w-72 h-48 flex flex-col justify-center items-center">
                                     <img src="assets/image/event (1).png" alt="event" data-aos="zoom-in">
                                     <span class="text-gray-400 mt-5">Live Chat And Networking</span>
@@ -247,7 +247,7 @@
                     </div>
                 </div>
                 <div class="container mx-auto px-4 flex items-center py-4 text-xl"  data-aos="flip-left">
-                    <div class="choose-bg w-full p-14">
+                    <div class="choose-bg w-full h-auto p-14 lg:text-xl sm:text-lg">
                         <p class="text-justify tracking-wider text-zinc-400">
                             The event industry has changed as a result of the COVID-19 pandemic. There’s no denying
                             that. Physical activities have been suspended temporarily. The rise of virtual and hybrid
