--- a/service-vr.html
+++ b/service-vr.html
@@ -96,7 +96,7 @@
     <main>
         <!-- banner -->
         <div class="sub-banner bg-center bg-top bg-cover bg-no-repeat p-40 pl-0">
-            <div class="container mx-auto px-4 flex items-center py-4 text-xl">
+            <div class="container mx-auto px-4  xl:pl-28 flex items-center py-4 text-xl">
                 <div class="w-3/5 flex items-center " data-aos="fade-right">
                     <h1 class="font-2 lg:text-7xl sm:text-6xl leading-normal mt-20">
                         <span class="font-2  lg:text-7xl sm:text-6xl text-yellow-500">VR APP</span><br> DEVELOPMENT
