--- a/VR Times blog details.html
+++ b/VR Times blog details.html
@@ -28,24 +28,24 @@
     <!-- font-awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <!-- animate.js  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
 </head>
 
 <body>
      <!-- header -->
      <header>
         <div class="navbar">
-            <div class="flex justify-evenly items-center text-xl">
+            <div class="flex justify-evenly items-center xl:text-xl">
                 <!-- Logo -->
-                <div class="animate__animated animate__heartBeat">
+                <div class="">
                     <a href="home.html">
-                        <img src="assets/image/logo.png" alt="logo" style="width: 140px;">
+                        <img src="assets/image/logo.png" alt="logo" class="lg:w-32 md:w-24">
                     </a>
                 </div>
 
                 <!-- Navigation Links -->
-                <nav class="relative animate__animated animate__bounceInDown">
-                    <ul class="flex space-x-16">
+                <nav class="relative">
+                    <ul class="flex xl:space-x-16 lg:space-x-10 md:space-x-5">
                         <li><a href="home.html" class="hover:text-yellow-500">Home</a></li>
                         <!-- Dropdown for Services -->
                         <li class="relative group dropdown">
@@ -55,7 +55,7 @@
                             </a>
                             <!-- Dropdown Menu -->
                             <div class="dropdown-content">
-                                <a href="service-vr.html" class="gap-5 hover:text-yellow-500">Virtual Reality</a>
+                                <a href="service-vr.html" class="gap-5 text-yellow-500">Virtual Reality</a>
                                 <a href="service-vr-tranning.html" class="hover:text-yellow-500">VR Industrial
                                     Training</a>
                                 <a href="service-metaverse.html" class="hover:text-yellow-500">Metaverse Development</a>
@@ -72,34 +72,34 @@
 
 
                 <!-- Social Icons -->
-                <div class="flex space-x-4 animate__animated animate__flip">
-                    <div class="social-icon w-10 h-10">
+                <div class="flex space-x-4">
+                    <div class="social-icon lg:w-10 md:w-8 lg:h-10 md:h-8">
                         <a href="https://www.facebook.com/" class="" target="_blank">
                             <img src="assets/image/facebook.png" alt="facebook">
                         </a>
                     </div>
-                    <div class="social-icon w-10 h-10" style="padding: 7px;">
+                    <div class="social-icon lg:w-10 md:w-8 lg:h-10 md:h-8" style="padding: 7px;">
                         <a href="https://x.com/" class="" target="_blank">
                             <img src="assets/image/twitter.png" alt="twitter">
                         </a>
                     </div>
-                    <div class="social-icon w-10 h-10">
+                    <div class="social-icon lg:w-10 md:w-8 lg:h-10 md:h-8">
                         <a href="https://www.instagram.com/" class="" target="_blank">
                             <img src="assets/image/instragram.png" alt="instragram">
                         </a>
                     </div>
-                </div>  
+                </div>
             </div>
         </div>
     </header>
     <!-- main -->
     <main>
         <!-- banner -->
-        <div class="sub-banner relative bg-center bg-top bg-cover bg-no-repeat p-40">
-            <div class="container mx-auto px-4 flex items-center py-4 text-xl">
+        <div class="sub-banner bg-center bg-top bg-cover bg-no-repeat p-40 pl-0">
+            <div class="container mx-auto px-4  xl:pl-28 flex items-center py-4 text-xl">
                 <div class="w-3/5 flex items-center ">
-                    <h1 class="font-2 text-7xl leading-normal mt-20 animate__animated animate__fadeInLeft">
-                        <span class="font-2 text-7xl text-yellow-500">AR/VR </span><br>TIMES
+                    <h1 class="font-2 lg:text-7xl sm:text-6xl leading-normal mt-20" data-aos="fade-right">
+                        <span class="font-2 lg:text-7xl sm:text-6xl text-yellow-500 block">AR/VR </span><br>TIMES
                     </h1>
                 </div>
             </div>
@@ -108,7 +108,7 @@
         <!-- AR/VR Times blog details -->
         <div class="blog">
             <div class="container mx-auto px-4 flex flex-col items-center py-4 text-xl">
-                <div class="w-full flex justify-top animate__animated animate__slideInUp">
+                <div class="w-full flex justify-top">
                     <div class="">
                         <h2 class="font-2 text-6xl leading-normal">Process of designing a VR industrial<br> training
                             program</h2>
@@ -123,13 +123,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="w-full mt-20">
-                    <img src="assets/image/blog.png" alt="blog" class="object-cover object-center  animate__animated animate__zoomIn"
+                <div class="w-full mt-20" data-aos="zoom-in">
+                    <img src="assets/image/blog.png" alt="blog" class="object-cover object-center"
                         style="width: 100%;height: 500px;">
                     <h3 class="font-2 text-4xl mt-16">Designing an Impactful VR Industrial Training Program:
                         Step-by-Step</h3>
                 </div>
-                <div class="w-full mt-20 choose-bg h-80 p-20">
+                <div class="w-full mt-20 choose-bg h-80 p-20" data-aos="flip-up">
                     <p class="text-2xl text-zinc-400 text-justify leading-relaxed">
                         Virtual Reality (VR) has proven to be a revolutionary force in various sectors, be it marketing,
                         education, architecture, or the ever-evolving world of Industrial training. With the immersive
@@ -138,7 +138,7 @@
                         process.
                     </p>
                 </div>
-                <div class="w-full mt-14">
+                <div class="w-full mt-14" data-aos="fade-right">
                     <div class="flex flex-col justify-center items-start py-4 cursor-pointer">
                         <h2 class="text-4xl font-2 tracking-wide text-zinc-50"><span
                                 class=" text-6xl text-yellow-500">01.</span> Understand the Core Needs and Objectives
@@ -154,7 +154,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="w-full mt-14">
+                <div class="w-full mt-14" data-aos="fade-right">
                     <div class="flex flex-col justify-center items-start py-4 cursor-pointer">
                         <h2 class="text-4xl font-2 tracking-wide text-zinc-50"><span
                                 class=" text-6xl text-yellow-500">02.</span> Choose the Right Equipment and Software
@@ -166,7 +166,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="w-full mt-14">
+                <div class="w-full mt-14" data-aos="fade-right">
                     <div class="flex flex-col justify-center items-start py-4 cursor-pointer">
                         <h2 class="text-4xl font-2 tracking-wide text-zinc-50"><span
                                 class=" text-6xl text-yellow-500">03.</span> Incorporate Real-World Scenarios
@@ -179,7 +179,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="w-full mt-14">
+                <div class="w-full mt-14" data-aos="fade-left">
                     <div class="flex flex-col justify-center items-start py-4 cursor-pointer">
                         <h2 class="text-4xl font-2 tracking-wide text-zinc-50"><span
                                 class=" text-6xl text-yellow-500">04.</span> Enhance with AI and Advanced Features
@@ -191,7 +191,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="w-full mt-14">
+                <div class="w-full mt-14" data-aos="fade-left">
                     <div class="flex flex-col justify-center items-start py-4 cursor-pointer">
                         <h2 class="text-4xl font-2 tracking-wide text-zinc-50"><span
                                 class=" text-6xl text-yellow-500">05.</span> Ensure Safety and Comfort
@@ -204,7 +204,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="w-full mt-14">
+                <div class="w-full mt-14" data-aos="fade-left">
                     <div class="flex flex-col justify-center items-start py-4 cursor-pointer">
                         <h2 class="text-4xl font-2 tracking-wide text-zinc-50"><span
                                 class=" text-6xl text-yellow-500">06.</span> Collect Feedback and Iterate
@@ -219,8 +219,8 @@
                         </p>
                     </div>
                 </div>
-                <div class="w-full mt-10">
-                    <img src="assets/image/blog-2.png" alt="blog" class="object-cover object-center   animate__animated animate__zoomIn"
+                <div class="w-full mt-10" data-aos="flip-right">
+                    <img src="assets/image/blog-2.png" alt="blog" class="object-cover object-center"
                         style="width: 100%;height: 500px;">
                     <p class="mt-10 text-zinc-300 font-light tracking-wide">
                         While we’ve outlined the steps to create an effective VR training program, let’s take a deeper
@@ -228,7 +228,7 @@
                         industrial training.
                     </p>
                 </div>
-                <div class="w-full mt-14">
+                <div class="w-full mt-14" data-aos="fade-right">
                     <div class="flex flex-col justify-center items-start py-4 cursor-pointer">
                         <h2 class="text-4xl font-2 tracking-wide text-zinc-50"><span
                                 class=" text-6xl text-yellow-500">07.</span> Embrace Multi-disciplinary Training Techniques
@@ -238,7 +238,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="w-full mt-14">
+                <div class="w-full mt-14" data-aos="fade-right">
                     <div class="flex flex-col justify-center items-start py-4 cursor-pointer">
                         <h2 class="text-4xl font-2 tracking-wide text-zinc-50"><span
                                 class=" text-6xl text-yellow-500">08.</span> Include Gamified Elements
@@ -248,7 +248,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="w-full mt-14">
+                <div class="w-full mt-14" data-aos="fade-right">
                     <div class="flex flex-col justify-center items-start py-4 cursor-pointer">
                         <h2 class="text-4xl font-2 tracking-wide text-zinc-50"><span
                                 class=" text-6xl text-yellow-500">09.</span> Continuous Updates & Evolution
@@ -258,7 +258,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="w-full mt-14">
+                <div class="w-full mt-14" data-aos="fade-left">
                     <div class="flex flex-col justify-center items-start py-4 cursor-pointer">
                         <h2 class="text-4xl font-2 tracking-wide text-zinc-50"><span
                                 class=" text-6xl text-yellow-500">10.</span> Collaboration in the Virtual Space
@@ -272,7 +272,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="w-full mt-14">
+                <div class="w-full mt-14" data-aos="fade-left">
                     <div class="flex flex-col justify-center items-start py-4 cursor-pointer">
                         <h2 class="text-4xl font-2 tracking-wide text-zinc-50"><span
                                 class=" text-6xl text-yellow-500">11.</span> Dive into the Metaverse
@@ -282,7 +282,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="w-full mt-14">
+                <div class="w-full mt-14" data-aos="fade-left">
                     <div class="flex flex-col justify-center items-start py-4 cursor-pointer">
                         <h2 class="text-4xl font-2 tracking-wide text-zinc-50"><span
                                 class=" text-6xl text-yellow-500">12.</span> Measure, Analyze, Improve
@@ -308,13 +308,13 @@
         <div class="footer overflow-hidden h-auto">
             <div
                 class="container  lg:container  xl:container  lg:container  md:container  sm:container mx-auto px-4 flex items-center py-20 text-xl">
-                <div class="lg:w-1/3 md:w-1/2">
-                    <div class="flex flex-col justify-center items-start animate__animated animate__zoomInLeft">
+                <div class="xl:w-1/3 sm:w-1/2">
+                    <div class="flex flex-col justify-center items-start" data-aos="fade-down-right">
                         <div class="logo">
-                            <img src="assets/image/logo.png" alt="logo" class="lg:w-40 md:w-32">
+                            <img src="assets/image/logo.png" alt="logo" class="lg:w-40 sm:w-32">
                         </div>
                         <div class="footer-contain mt-10 ">
-                            <p class="text-zinc-400 opacity-75 lg:text-lg md:text-lg leading-relaxed tracking-wide">
+                            <p class="text-zinc-400 opacity-75 lg:text-lg sm:text-lg leading-relaxed tracking-wide">
                                 Lorem Ipsum is simply dummy text<br> of the printing and typesetting<br> industry. Lorem
                                 Ipsum has been<br> the industry's standard dummy text<br> ever since the 1500s, when
                                 an<br> unknown printer took a galley.
@@ -322,40 +322,53 @@
                         </div>
                     </div>
                 </div>
-                <div class="lg:w-1/3 md:w-1/2 flex-col justify-center items-center text-center">
+                <div class="xl:w-1/3 sm:w-1/2 flex-col justify-center items-center text-center">
                     <div class="footer-title">
-                        <h4 class="font-2 text-yellow-500 uppercase font-medium lg:text-4xl md:text-3xl">Reach us</h4>
+                        <h4 class="font-2 text-yellow-500 uppercase font-medium lg:text-4xl sm:text-3xl">Reach us</h4>
                     </div>
                     <div class="banner-border-2 pb-4"></div>
                     <div class="footer-social-icon flex justify-evenly mt-10">
                         <div class="calendly">
-                            <a href="" class="flex flex-col items-center justify-center animate__animated animate__slideInLeft">
-                                <img src="assets/image/calendly.png" alt="Calendly" class="lg:h-20 md:h-14">
-                                <span class="lg:pt-5 lg:text-xl md:text-base md:pt-3">Book a Meeting On<br>
+                            <a href="" class="flex flex-col items-center justify-center" data-aos="fade-down-right">
+                                <img src="assets/image/calendly.png" alt="Calendly" class="lg:h-20 sm:h-14">
+                                <span class="lg:pt-5 lg:text-xl sm:text-base sm:pt-3">Book a Meeting On<br>
                                     Calendly</span>
                             </a>
                         </div>
                         <div class="whatsapp">
-                            <a href="" class=" flex flex-col items-center justify-center animate__animated animate__slideInRight">
-                                <img src="assets/image/whatsapp.png" alt="whatsapp" class="lg:h-20 md:h-14">
-                                <span class="lg:pt-5 lg:text-xl md:text-base md:pt-3">Connect With Us<br> On
+                            <a href="" class=" flex flex-col items-center justify-center" data-aos="fade-down-left">
+                                <img src="assets/image/whatsapp.png" alt="whatsapp" class="lg:h-20 sm:h-14">
+                                <span class="lg:pt-5 lg:text-xl sm:text-base sm:pt-3">Connect With Us<br> On
                                     WhatsApp</span>
                             </a>
                         </div>
                     </div>
                     <div class="footer-social-icon mt-10">
                         <div class="email">
-                            <a href="" class="flex flex-col items-center justify-center animate__animated animate__slideInUp">
-                                <img src="assets/image/email.png" alt="email" class="lg:h-20 md:h-14">
-                                <span class="lg:pt-5 lg:text-xl md:text-base md:pt-3">Contact<br> @twinreality.in</span>
+                            <a href="" class="flex flex-col items-center justify-center" data-aos="fade-up">
+                                <img src="assets/image/email.png" alt="email" class="lg:h-20 sm:h-14">
+                                <span class="lg:pt-5 lg:text-xl sm:text-base sm:pt-3">Contact<br> @twinreality.in</span>
                             </a>
                         </div>
                     </div>
                 </div>
-                <div class="lg:w-1/3 lg:block twin-reality-img footer-img relativ md:hidden"></div>
+                <div class="xl:w-1/3 xl:block twin-reality-img footer-img relativ sm:hidden"></div>
             </div>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+
+    <script>
+        new WOW().init();
+    </script>
+
+    <script>
+        AOS.init({
+            duration: 1200,  // Controls animation duration
+            once: true,      // Animation runs only once
+            mirror: true
+        });
+    </script>
 </body>
 
 </html>
